ReSharper.FSharp/test/data/parsing/errors/Type - Attribute target 02.fs
namespace Ns

[<x A>]
type T = class end
